<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/convertBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_button_bg"
        android:contentDescription="@string/convert_button_desciption"
        android:elevation="8dp"
        android:padding="12dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        app:srcCompat="@drawable/convert"
        app:tint="@color/purple" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topHalf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/top_gradient_bg"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:text="@string/length_converter"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/fromTag"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/outline_light_tag"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"
                    android:text="From"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginBottom="100dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp">

                        <EditText
                            android:id="@+id/inputTop"
                            android:layout_width="200dp"
                            android:layout_height="72dp"
                            android:background="@drawable/input_underline_white"
                            android:hint="@string/number_hint"
                            android:inputType="text"
                            android:paddingBottom="6dp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/white"

                            android:textColorHint="@color/white_hint"
                            android:textCursorDrawable="@drawable/cursor_white"
                            android:textSize="40sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/unitSelectTop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iconTop"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="clip_vertical"

                            android:layout_marginTop="20dp"
                            app:layout_constraintEnd_toStartOf="@+id/unitTopTxt"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/drop_down"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/unitTopTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="clip_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/unit_millimetre"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/iconTop"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomHalf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topHalf">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fromTag2"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/outline_normal_tag"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"
                    android:text="To"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="140dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp">

                        <EditText
                            android:id="@+id/inputBottom"
                            android:layout_width="200dp"
                            android:layout_height="72dp"
                            android:background="@drawable/input_underline_purple"
                            android:hint="@string/number_hint"
                            android:inputType="text"
                            android:paddingBottom="6dp"
                            android:textColor="@color/purple"
                            android:textColorHint="@color/light_purple"
                            android:textCursorDrawable="@drawable/cursor_purple"
                            android:textSize="40sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/unitSelectBottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iconBottom"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="clip_vertical"

                            android:layout_marginTop="20dp"
                            app:layout_constraintEnd_toStartOf="@+id/unitBottomTxt"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/drop_down"
                            app:tint="@color/purple" />

                        <TextView
                            android:id="@+id/unitBottomTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="clip_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/unit_metre"
                            android:textColor="@color/purple"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/iconBottom"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>